fix padding on iOS devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -73,6 +73,8 @@ body {
     width: 100%;
     z-index: 111;
     background: #ffffff;
+    position: sticky;
+    position: -webkit-sticky;
 }
 
 .spacer {
@@ -146,6 +148,7 @@ footer {
 /* -- Info Page*/
 
 .info-text {
+    padding-left: 15px;
     margin-top: 140px;
     color: #808080;
 }
